updated to apollo micro server

--- a/package.json
+++ b/package.json
@@ -1,46 +1,48 @@
 {
   "name": "kickoff-apollo-server",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Kickoff for Apollo Graphql Server",
-  "main": "src/index.js",
-  "scripts": {
-    "start": "node dist/index.js",
-    "dev": "nodemon --exec babel-node src/index.js",
-    "build": "babel src --out-dir dist --copy-files",
-    "lint": "eslint --fix --ext .jsx,.js src/*.js src/**/*.js src/**/**/*.js"
-  },
+  "main": "index.js",
   "keywords": [],
   "author": "Parminder Klair",
   "license": "MIT",
+  "scripts": {
+    "dev": "micro-dev src --port 4000 --silent",
+    "lint": "eslint --fix --ext .jsx,.js src/*.js src/**/*.js src/**/**/*.js",
+    "deploy": "now --prod"
+  },
   "dependencies": {
-    "@babel/polyfill": "^7.4.4",
-    "apollo-server": "^2.6.4",
+    "@babel/polyfill": "^7.7.0",
+    "@babel/register": "^7.7.4",
+    "apollo-server-micro": "^2.9.12",
     "bcryptjs": "^2.4.3",
-    "convict": "^5.0.0",
-    "dotenv": "^8.0.0",
-    "ejs": "^2.6.2",
-    "email-templates": "^5.1.0",
-    "graphql": "^14.3.1",
+    "convict": "^5.2.0",
+    "dotenv": "^8.2.0",
+    "ejs": "^3.0.1",
+    "email-templates": "^6.0.4",
+    "graphql": "^14.5.8",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.11",
-    "merge-graphql-schemas": "^1.5.8",
-    "mongoose": "^5.6.0",
-    "nodemailer": "^6.2.1",
+    "lodash": "^4.17.15",
+    "merge-graphql-schemas": "^1.7.3",
+    "micro": "^9.3.4",
+    "micro-cors": "^0.1.1",
+    "micro-dev": "^3.0.0",
+    "mongoose": "^5.7.13",
+    "nodemailer": "^6.3.1",
     "randomstring": "^1.1.5",
     "winston": "^3.2.1",
-    "winston-mongodb": "^5.0.0"
+    "winston-mongodb": "^5.0.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
-    "@babel/node": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-prettier": "^5.0.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-prettier": "^3.1.0",
-    "nodemon": "^1.19.1",
-    "prettier": "^1.18.2"
+    "@babel/cli": "^7.7.4",
+    "@babel/core": "^7.7.4",
+    "@babel/node": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "eslint": "^6.7.2",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.1",
+    "prettier": "^1.19.1"
   }
 }
