--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^16.12.0",
     "react-select": "^3.0.8",
     "redux-persist": "^6.0.0",
+    "responsive-loader": "^1.2.0",
     "styled-components": "^5.0.0",
     "yup": "^0.28.1"
   },
