--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,6 @@
 {
-  "extends": [
-    "prettier",
-    "airbnb-base"
-  ],
-  "plugins": [
-    "prettier",
-    "import"
-  ],
+  "extends": ["prettier", "airbnb-base"],
+  "plugins": ["prettier", "import"],
   "rules": {
     "indent": 0,
     "no-tabs": 0,
@@ -24,12 +18,15 @@
     "import/prefer-default-export": 0,
     "consistent-return": 0,
     "func-names": 0,
-    "prettier/prettier": ["error", {
-      "singleQuote": true,
-      "trailingComma": "all",
-      "bracketSpacing": true,
-      "jsxBracketSameLine": true,
-      "parser": "flow"
-    }]
+    "prettier/prettier": [
+      "error",
+      {
+        "singleQuote": true,
+        "trailingComma": "all",
+        "bracketSpacing": true,
+        "jsxBracketSameLine": true,
+        "parser": "flow"
+      }
+    ]
   }
 }
