--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "lint": "eslint --fix --ext .jsx,.js src/*.js src/**/*.js",
     "lint-two": "NODE_ENV=production lint-staged"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint",
+      "pre-push": "npm run lint"
+    }
+  },
   "dependencies": {
     "@mdx-js/loader": "^1.6.21",
     "@next/mdx": "^10.0.1",
@@ -42,6 +48,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
+    "cross-env": "^7.0.3",
     "eslint": "^7.13.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^6.15.0",
@@ -49,6 +56,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
+    "husky": "^4.3.7",
     "lint-staged": "^10.5.1",
     "prettier": "^2.1.2",
     "pretty-quick": "^3.1.0"
