--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kickoff-nextjs",
+  "name": "kickoff-nextjs-apollo",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
@@ -9,56 +9,64 @@
     "dev": "next",
     "start": "next start",
     "build": "next build",
-    "export": "yarn run build && next export",
-    "deploy": "now --prod",
-    "lint": "eslint --fix --ext .jsx,.js src/*.js src/**/*.js",
-    "lint-two": "NODE_ENV=production lint-staged"
+    "deploy": "vercel --prod",
+    "lint": "eslint --fix --ext .jsx,.js src/**/*.js src/**/**/*.js"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint",
-      "pre-push": "npm run lint"
+      "pre-commit": "npm run lint"
     }
   },
   "dependencies": {
-    "@mdx-js/loader": "^1.6.21",
-    "@next/mdx": "^10.0.1",
-    "@sanity/client": "^2.0.9",
+    "@mdx-js/loader": "^1.6.22",
+    "@next/mdx": "^10.1.3",
     "@zeit/next-css": "^1.0.1",
-    "axios": "^0.21.0",
-    "easy-peasy": "^4.0.1",
-    "formik": "^2.2.5",
-    "groq": "^2.0.9",
+    "apollo-server-micro": "^2.19.1",
+    "axios": "^0.21.1",
+    "bcryptjs": "^2.4.3",
+    "convict": "^6.0.1",
+    "dotenv": "^8.2.0",
+    "easy-peasy": "^5.0.3",
+    "formik": "^2.2.6",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-optipng": "^8.0.0",
     "isomorphic-unfetch": "^3.1.0",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "lqip-loader": "^2.2.1",
+    "merge-graphql-schemas": "^1.7.8",
     "micro": "9.3.5-canary.1",
-    "next": "^10.0.1",
+    "micro-cors": "^0.1.1",
+    "mongoose": "^5.12.4",
+    "next": "^10.1.3",
     "next-compose-plugins": "^2.2.1",
-    "next-seo": "^4.17.0",
+    "next-seo": "^4.24.0",
+    "nodemailer": "^6.5.0",
     "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-select": "^3.1.0",
+    "randomstring": "^1.1.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-select": "^4.3.0",
     "redux-persist": "^6.0.0",
-    "responsive-loader": "^2.2.0",
-    "styled-components": "^5.2.1",
-    "yup": "^0.29.3"
+    "responsive-loader": "^2.3.0",
+    "styled-components": "^5.2.3",
+    "winston": "^3.3.3",
+    "winston-mongodb": "^5.0.7",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.3",
     "cross-env": "^7.0.3",
-    "eslint": "^7.13.0",
+    "eslint": "^7.16.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^6.15.0",
+    "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react": "^7.21.5",
-    "husky": "^4.3.7",
-    "lint-staged": "^10.5.1",
-    "prettier": "^2.1.2",
-    "pretty-quick": "^3.1.0"
+    "husky": "^4.3.6",
+    "jest": "^26.6.3",
+    "prettier": "^2.2.1"
   }
 }
