--- a/package.json
+++ b/package.json
@@ -27,10 +27,9 @@
     "convict": "^6.0.1",
     "dotenv": "^8.2.0",
     "easy-peasy": "^5.0.3",
-    "formik": "^2.2.6",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-optipng": "^8.0.0",
-    "isomorphic-unfetch": "^3.1.0",
+    "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "lqip-loader": "^2.2.1",
@@ -46,13 +45,9 @@
     "randomstring": "^1.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-select": "^4.3.0",
     "redux-persist": "^6.0.0",
-    "responsive-loader": "^2.3.0",
     "styled-components": "^5.2.3",
-    "winston": "^3.3.3",
-    "winston-mongodb": "^5.0.7",
-    "yup": "^0.32.9"
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
