--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     }
   },
   "dependencies": {
+    "@apollo/client": "^3.3.15",
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^10.1.3",
     "@zeit/next-css": "^1.0.1",
