--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "convict": "^6.0.1",
     "dotenv": "^8.2.0",
     "easy-peasy": "^5.0.3",
+    "formik": "^2.2.6",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-optipng": "^8.0.0",
     "graphql": "^15.5.0",
