--- a/package.json
+++ b/package.json
@@ -18,37 +18,41 @@
     }
   },
   "dependencies": {
-    "@apollo/client": "^3.3.15",
+    "@apollo/client": "^3.3.19",
     "@mdx-js/loader": "^1.6.22",
-    "@next/mdx": "^10.1.3",
+    "@next/mdx": "^10.2.2",
     "@zeit/next-css": "^1.0.1",
-    "apollo-server-micro": "^2.19.1",
+    "apollo-link": "^1.2.14",
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-http": "^1.5.17",
+    "apollo-server-micro": "^2.24.1",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
-    "convict": "^6.0.1",
-    "dotenv": "^8.2.0",
+    "convict": "^6.1.0",
+    "dotenv": "^9.0.2",
     "easy-peasy": "^5.0.3",
-    "formik": "^2.2.6",
+    "formik": "^2.2.7",
     "graphql": "^15.5.0",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-optipng": "^8.0.0",
+    "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "lqip-loader": "^2.2.1",
     "merge-graphql-schemas": "^1.7.8",
     "micro": "9.3.5-canary.1",
     "micro-cors": "^0.1.1",
-    "mongoose": "^5.12.4",
-    "next": "^10.1.3",
+    "mongoose": "^5.12.10",
+    "next": "^10.2.2",
     "next-compose-plugins": "^2.2.1",
     "next-seo": "^4.24.0",
-    "nodemailer": "^6.5.0",
+    "nodemailer": "^6.6.0",
     "prop-types": "^15.7.2",
-    "randomstring": "^1.1.5",
+    "randomstring": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "redux-persist": "^6.0.0",
-    "styled-components": "^5.2.3",
+    "styled-components": "^5.3.0",
     "sweetalert": "^2.1.2",
     "winston": "^3.3.3",
     "yup": "^0.32.9"
@@ -57,15 +61,15 @@
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "cross-env": "^7.0.3",
-    "eslint": "^7.16.0",
+    "eslint": "^7.26.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.0",
-    "eslint-plugin-react": "^7.21.5",
-    "husky": "^4.3.6",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
+    "husky": "^6.0.0",
     "jest": "^26.6.3",
-    "prettier": "^2.2.1"
+    "prettier": "^2.3.0"
   }
 }
