--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "apollo-link-context": "^1.0.20",
     "apollo-link-http": "^1.5.17",
     "apollo-server-micro": "^2.24.1",
-    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "convict": "^6.1.0",
     "dotenv": "^9.0.2",
@@ -63,6 +62,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^7.26.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-next": "latest",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
