--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "apollo-server-micro": "^2.24.1",
     "bcryptjs": "^2.4.3",
     "convict": "^6.1.0",
+    "dayjs": "^1.10.4",
     "dotenv": "^9.0.2",
     "easy-peasy": "^5.0.3",
     "formik": "^2.2.7",
@@ -50,6 +51,7 @@
     "randomstring": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-markdown": "^6.0.2",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.0",
     "sweetalert": "^2.1.2",
@@ -62,7 +64,6 @@
     "cross-env": "^7.0.3",
     "eslint": "^7.26.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-next": "latest",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
