fixed github cypress test

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -25,4 +25,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm install
-      - run: npm run test
+      # and run all Cypress tests
+      - name: Cypress run
+        uses: cypress-io/github-action@v2
+        with:
+          start: npm dev
