--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -28,5 +28,10 @@ jobs:
       # and run all Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v2
+      - uses: actions/upload-artifact@v1
+        if: failure()
+        with:
+          name: cypress-screenshots
+          path: cypress/screenshots
         with:
           start: npm dev
