--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -25,8 +25,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm install
-        with:
-          start: npm run dev
+      - run: npm run dev
       # and run all Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v2
