--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           start: npm run dev
           wait-on: 'http://localhost:3000'
-          command: npm run cypress:open
+          command: npm run cypress:run
       - uses: actions/upload-artifact@v1
         if: failure()
         with:
