--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -5,9 +5,9 @@ name: Cypress End to End Testing
 
 on:
   push:
-    branches: [master, development]
+    branches: [master]
   pull_request:
-    branches: [master, development]
+    branches: [master]
 
 jobs:
   build:
