--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.19",
+    "@headlessui/react": "^1.2.0",
+    "@heroicons/react": "^1.0.1",
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^10.2.2",
     "@zeiq/core": "^1.0.25",
-    "@zeit/next-css": "^1.0.1",
     "apollo-link": "^1.2.14",
     "apollo-link-context": "^1.0.20",
     "apollo-link-http": "^1.5.17",
@@ -64,6 +65,7 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "autoprefixer": "^10.2.6",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "cross-env": "^7.0.3",
@@ -77,7 +79,9 @@
     "eslint-plugin-react": "^7.23.2",
     "husky": "^6.0.0",
     "jest": "^26.6.3",
+    "postcss": "^8.3.0",
     "prettier": "^2.3.0",
-    "start-server-and-test": "^1.12.3"
+    "start-server-and-test": "^1.12.3",
+    "tailwindcss": "^2.1.2"
   }
 }
