--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@heroicons/react": "^1.0.1",
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^10.2.2",
-    "@zeiq/core": "^1.0.25",
+    "@zeiq/core": "^1.0.27",
+    "@zeiq/web": "^1.0.29",
     "apollo-link": "^1.2.14",
     "apollo-link-context": "^1.0.20",
     "apollo-link-http": "^1.5.17",
