updated package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kickoff-nextjs-apollo",
+  "name": "kickoff-nextjs-fullstack",
   "version": "1.1.0",
   "description": "",
   "keywords": [],
