--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.19",
+    "@aws-sdk/client-cognito-identity": "^3.18.0",
+    "@aws-sdk/client-s3": "^3.18.0",
+    "@aws-sdk/credential-provider-cognito-identity": "^3.18.0",
+    "@aws-sdk/s3-request-presigner": "^3.18.0",
     "@headlessui/react": "^1.2.0",
     "@heroicons/react": "^1.0.1",
     "@mdx-js/loader": "^1.6.22",
@@ -44,6 +48,7 @@
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "logdna-winston": "^3.0.5",
     "lqip-loader": "^2.2.1",
     "merge-graphql-schemas": "^1.7.8",
     "micro": "9.3.5-canary.1",
@@ -54,6 +59,7 @@
     "next-compose-plugins": "^2.2.1",
     "next-seo": "^4.24.0",
     "nodemailer": "^6.6.0",
+    "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "randomstring": "^1.2.1",
     "react": "^17.0.2",
@@ -62,6 +68,7 @@
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.0",
     "sweetalert": "^2.1.2",
+    "twin.macro": "^2.5.0",
     "winston": "^3.3.3",
     "yup": "^0.32.9"
   },
