--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     }
   },
   "dependencies": {
-    "@apollo/client": "^3.3.19",
+    "@apollo/client": "^3.3.20",
     "@aws-sdk/client-cognito-identity": "^3.18.0",
     "@aws-sdk/client-s3": "^3.18.0",
     "@aws-sdk/credential-provider-cognito-identity": "^3.18.0",
@@ -29,19 +29,19 @@
     "@headlessui/react": "^1.2.0",
     "@heroicons/react": "^1.0.1",
     "@mdx-js/loader": "^1.6.22",
-    "@next/mdx": "^10.2.2",
-    "@zeiq/core": "^1.0.30",
-    "@zeiq/web": "^1.0.30",
+    "@next/mdx": "^11.0.0",
+    "@zeiq/core": "^1.1.0",
+    "@zeiq/web": "^1.1.3",
     "apollo-link": "^1.2.14",
     "apollo-link-context": "^1.0.20",
     "apollo-link-http": "^1.5.17",
-    "apollo-server-micro": "^2.24.1",
+    "apollo-server-micro": "^2.25.1",
     "bcryptjs": "^2.4.3",
     "convict": "^6.1.0",
-    "dayjs": "^1.10.4",
-    "dotenv": "^9.0.2",
+    "dayjs": "^1.10.5",
+    "dotenv": "^10.0.0",
     "easy-peasy": "^5.0.3",
-    "formik": "^2.2.7",
+    "formik": "^2.2.9",
     "graphql": "^15.5.0",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-optipng": "^8.0.0",
@@ -53,12 +53,13 @@
     "merge-graphql-schemas": "^1.7.8",
     "micro": "9.3.5-canary.1",
     "micro-cors": "^0.1.1",
-    "mongodb-client-encryption": "^1.2.3",
-    "mongoose": "^5.12.10",
-    "next": "^10.2.2",
+    "mongodb-client-encryption": "^1.2.5",
+    "mongoose": "^5.12.14",
+    "next": "^11.0.0",
     "next-compose-plugins": "^2.2.1",
-    "next-seo": "^4.24.0",
-    "nodemailer": "^6.6.0",
+    "next-seo": "^4.26.0",
+    "next-themes": "^0.0.14",
+    "nodemailer": "^6.6.2",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "randomstring": "^1.2.1",
@@ -75,21 +76,21 @@
   "devDependencies": {
     "autoprefixer": "^10.2.6",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "^27.0.2",
     "cross-env": "^7.0.3",
-    "cypress": "^7.4.0",
-    "eslint": "^7.26.0",
+    "cypress": "^7.5.0",
+    "eslint": "^7.29.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.23.2",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react": "^7.24.0",
     "husky": "^6.0.0",
-    "jest": "^26.6.3",
-    "postcss": "^8.3.0",
-    "prettier": "^2.3.0",
-    "start-server-and-test": "^1.12.3",
-    "tailwindcss": "^2.1.2"
+    "jest": "^27.0.4",
+    "postcss": "^8.3.5",
+    "prettier": "^2.3.1",
+    "start-server-and-test": "^1.12.5",
+    "tailwindcss": "^2.2.2"
   }
 }
