--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
     }
   },
   "dependencies": {
-    "@apollo/client": "^3.4.17",
-    "@aws-sdk/client-cognito-identity": "^3.40.0",
-    "@aws-sdk/client-s3": "^3.40.1",
-    "@aws-sdk/credential-provider-cognito-identity": "^3.40.0",
-    "@aws-sdk/s3-request-presigner": "^3.40.1",
+    "@apollo/client": "^3.5.6",
+    "@aws-sdk/client-cognito-identity": "^3.43.0",
+    "@aws-sdk/client-s3": "^3.44.0",
+    "@aws-sdk/credential-provider-cognito-identity": "^3.43.0",
+    "@aws-sdk/s3-request-presigner": "^3.44.0",
+    "@graphql-toolkit/schema-merging": "^0.10.7",
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "@mdx-js/loader": "^1.6.22",
-    "@next/mdx": "^12.0.3",
+    "@next/mdx": "^12.0.7",
     "@zeiq/core": "^1.1.0",
     "@zeiq/web": "^1.1.4",
     "apollo-link": "^1.2.14",
@@ -41,57 +42,57 @@
     "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
     "easy-peasy": "^5.0.4",
+    "email-templates": "^8.0.8",
     "formik": "^2.2.9",
     "graphql": "^16.0.1",
-    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-mozjpeg": "^10.0.0",
     "imagemin-optipng": "^8.0.0",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "logdna-winston": "^4.0.1",
     "lqip-loader": "^2.2.1",
-    "merge-graphql-schemas": "^1.7.8",
     "micro": "9.3.5-canary.1",
     "micro-cors": "^0.1.1",
     "mongodb-client-encryption": "^1.2.7",
     "mongoose": "^6.0.12",
-    "next": "^12.0.3",
+    "next": "^12.0.7",
     "next-compose-plugins": "^2.2.1",
     "next-seo": "^4.28.1",
     "next-themes": "^0.0.15",
-    "nodemailer": "^6.7.0",
+    "nodemailer": "^6.7.2",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "randomstring": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-markdown": "^7.1.0",
+    "react-markdown": "^7.1.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.3",
     "sweetalert": "^2.1.2",
-    "twin.macro": "^2.8.1",
+    "twin.macro": "^2.8.2",
     "winston": "^3.3.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^27.3.1",
+    "babel-jest": "^27.4.5",
     "cross-env": "^7.0.3",
-    "cypress": "^8.7.0",
-    "eslint": "^8.2.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-next": "^12.0.3",
+    "cypress": "^9.2.0",
+    "eslint": "^8.5.0",
+    "eslint-config-airbnb": "^19.0.2",
+    "eslint-config-next": "^12.0.7",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.27.0",
+    "eslint-plugin-react": "^7.27.1",
     "husky": "^7.0.4",
-    "jest": "^27.3.1",
-    "postcss": "^8.3.11",
-    "prettier": "^2.4.1",
+    "jest": "^27.4.5",
+    "postcss": "^8.4.5",
+    "prettier": "^2.5.1",
     "start-server-and-test": "^1.14.0",
-    "tailwindcss": "^2.2.19"
+    "tailwindcss": "^3.0.7"
   }
 }
