--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
     "easy-peasy": "^5.0.4",
+    "ejs": "^3.1.6",
     "email-templates": "^8.0.8",
     "formik": "^2.2.9",
     "graphql": "^16.0.1",
@@ -54,6 +55,7 @@
     "lqip-loader": "^2.2.1",
     "micro": "9.3.5-canary.1",
     "micro-cors": "^0.1.1",
+    "mjml": "^4.11.0",
     "mongodb-client-encryption": "^1.2.7",
     "mongoose": "^6.1.3",
     "next": "^12.0.7",
