--- a/package.json
+++ b/package.json
@@ -77,8 +77,8 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.16.5",
     "autoprefixer": "^10.4.0",
-    "babel-eslint": "^10.1.0",
     "babel-jest": "^27.4.5",
     "cross-env": "^7.0.3",
     "cypress": "^9.2.0",
