--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@heroicons/react": "^1.0.5",
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^12.0.8",
+    "@tailwindcss/typography": "^0.5.0",
     "@zeiq/core": "^1.1.0",
     "@zeiq/web": "^1.1.4",
     "apollo-link": "^1.2.14",
@@ -53,6 +54,7 @@
     "lodash": "^4.17.21",
     "logdna-winston": "^4.0.1",
     "lqip-loader": "^2.2.1",
+    "markdown-it": "^12.3.2",
     "micro": "9.3.5-canary.1",
     "micro-cors": "^0.1.1",
     "mjml": "^4.11.0",
@@ -68,7 +70,6 @@
     "randomstring": "^1.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-markdown": "^8.0.0",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.3",
     "sweetalert": "^2.1.2",
