--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "@aws-sdk/credential-provider-cognito-identity": "^3.52.0",
     "@aws-sdk/s3-request-presigner": "^3.52.0",
     "@graphql-toolkit/schema-merging": "^0.10.7",
+    "@graphql-tools/merge": "^8.3.6",
+    "@graphql-tools/schema": "^9.0.4",
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.5",
     "@mdx-js/loader": "^2.0.0",
+    "@mdx-js/react": "^2.1.5",
     "@next/mdx": "^12.1.0",
     "@tailwindcss/typography": "^0.5.2",
     "@zeiq/core": "^1.1.0",
