--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "kickoff-nextjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -17,6 +17,13 @@
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "styled-components": "^5.3.8",
+    "typescript": "4.9.5",
+    "zustand": "^4.3.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
