--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "lodash": "^4.17.21",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.4",
     "styled-components": "^5.3.8",
     "typescript": "4.9.5",
     "zustand": "^4.3.5"
